# trajectory-analysis

./: .gitignore  Cargo.toml  Makefile.toml  install.sh
benches/: my_benchmark.rs
src/: adhoc.rs  atoms.rs  cli.rs  cp2k.rs  graph.rs  lammps.rs  lammps_.rs  lib.rs  lindemann.rs  lindermann.rs  main.rs  part.rs  reaction.rs  ring.rs  rings.rs  topo.rs  xyz.rs  xyztraj.rs
src/reaction/: algo.rs  base.rs  cli.rs  io.rs  options.rs
tests/: test_graph.rs
tests/files/: lty.xlsx  lty.xyz
