# [[file:trajectory.note::fa80d52c][fa80d52c]]
[package]
name = "trajectory-analysis"
version = "0.2.0"
edition = "2021"
authors = ["Wenping Guo <ybyygu@gmail.com>"]

[dependencies]
serde = {version="1", features = ["derive"]}
serde_json = "1"
clap = "2.33"
indexmap = "1.7"
indicatif = "0.16"
streaming-stats = "0.2"
text-parser = { version = "0.1.1", package = "gchemol-parser" }
gut = { version = "0.1", package="gchemol-gut" }
vecfx = { version = "0.1", features= ["nalgebra"] }
gchemol = { version = ">=0.0.41", features=["adhoc"]}
plotly = "0.6"

# TODO: remove below
petgraph = "0.6"
structopt = "0.3"
cgmath = "0.18"                 # TODO: remove

[dev-dependencies]
approx = "0.3"
# fa80d52c ends here
